[package]
name = "kepler_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kepler_core = { git= "https://github.com/keplerplanetary/kepler_core.git", tag="0.2.0" }
toml = "0.8.9"
maths-rs = "0.2.6"
csv = "1.3.0"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"